# ros2_event_camera

./: .gitignore  .~lock.commands.odt#  .~lock.notes.odt#  README.md  commands.odt  notes.odt  requirements.txt  requirements_alienware.txt
AKIDA/0_global_workflow/: 0_global_akida_workflow.py
AKIDA/1_ec_example/: _0_example_code.py  _10_deploy_pi_akida.py  _6_qat.py  _8_check_cnn2snn.py  _8_convert.py
AKIDA/1_ec_example/quantized_models/q8_calib_GOOD_b8_n10/: q_tennst_int8.onnx  quantization_report.txt
AKIDA/1_ec_example/quantized_models/q8_calib_b8_n10/: q_tennst_int8.onnx  quantization_report.txt
AKIDA/1_ec_example/quantized_models/q8_calib_new_b8_n10/: quantization_report.txt
AKIDA/1_ec_example/quantized_models/q8_default_GOOD_b8_n10/: q_tennst_int8.onnx
AKIDA/1_ec_example/quantized_models/q8_default_b8_n10/: q_tennst_int8.onnx
AKIDA/1_ec_example/training/: _0_check cuda.py  _1_1_preprocess_bin_1.py  _1_2_preprocess_bin_10.py  _2_3_model_f16_last_10_gradual.py  _3_2_train_fast.py  _3_3_train_fast_dataset_10.py  _3_4_train_fast_akida.py  _4_0_plot_training_loss.py  _4_1_test_tennst_plot_akida.py
AKIDA/1_ec_example/training/old_files/: 1_preprocess.py  1_preprocess_check.py  3_train.py  _2_2_model_f16_last_10.py  _5_quantize_4D.py  _5_quantize_initial.py
AKIDA/2_custom_v1/: _0_testing_ipv1  _0_testing_ipv1_tennst  _0_testing_pi.py  _1_preprocess_ipv1.py  _2_model_ipv1.py
EC/src/composition/: CMakeLists.txt  package.xml
EC/src/composition/include/composition/: listener_component.hpp  talker_component.hpp
EC/src/composition/launch/: composition_demo.launch.py
EC/src/composition/src/: listener_component.cpp  manual_composition.cpp
EC/src/event_reader/: package.xml  setup.cfg
RGB/: rgb_detection_training.py
RGB/Datasets/Example/Annotations/: image_2025_10_14_11_00_40.txt  image_2025_10_14_11_00_48.txt  image_2025_10_14_11_00_55.txt  image_2025_10_14_11_01_30.txt  image_2025_10_14_11_01_33.txt  image_2025_10_14_11_01_40.txt  labels
akida_examples/: 0_global_akida_workflow.py  1_spatiotemporal_network_ec.py  1_yolo_akida.py  2.py  2_spatiotemporal_network_ec.py  test.py
akida_examples/1_ec_example/: 3_train_new.py  _10_deploy_akida.py  _10_deploy_pi_akida.py  _5_0_quantize_default.py  _5_1_quantize_calib.py  _5_quantize copy.py  _5_quantize.py  _5_quantize_calib.py  _5_quantize_default.py  _5_quantize_working.py  _5_quantize_working_2.py  _6_qat.py  _7_prep_akida_test_small.py  _7_test_qat.py  _8_convert.py  _9_test_snn.py
akida_examples/1_ec_example/akida_models/: akida2_int8.fbz
akida_examples/1_ec_example/quantized_models/: quantization_report.txt
akida_examples/1_ec_example/quantized_models/q8_calib_new_b8_n10/: q_tennst_int8.onnx
akida_examples/1_ec_example/quantized_models_2/: quantization_report.txt
akida_examples/1_ec_example/training/: 0_discover_dataset.py  1_preprocess.py  1_preprocess_new.py  1_preprocess_new_check.py  1_training.py  2_model.py  2_train_fly  3_train.py  3_train_faster.py  3_train_new.py  _0_discover_dataset.py  _1_4_preprocess_akida.py  _1_preprocess_new_check.py  _2_3_model_f16_last_10_gradual.py  _2_4_model_f16_last_10_original.py  _2_5_model_uint8_akida.py  _2_model_f16.py  _3_2_train_fast.py  _3_3_train_fast_dataset_10.py  _3_4_train_fast_akida.py  _3_train_even_faster.py  _3_train_faster.py  _3_train_new.py  _4_0_plot_training_loss.py  _4_1_test_tennst_plot.py  _4_1_test_tennst_plot_akida.py  _4_test_tennst.py  _4_test_tennst_akida.py  check cuda.py  draft.py  model_2.py
akida_examples/2_custom_v1/: _0_testing_ipv1
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/composition/src/: talker_component.cpp
src/event_reader/: setup.py
(+50 files in other folders)
