<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>event_reader</name>
  <version>0.0.0</version>
  <description>Read events from rosbag</description>
  <maintainer email="jonurce@todo.todo">jonurce</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>event_camera_py</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>mpl_toolkits</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pandas</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
